--- a/web/LogInSignUpPages/signUpStu.html
+++ b/web/LogInSignUpPages/signUpStu.html
@@ -14,6 +14,27 @@
     <!--CSS File link-->
     <link rel="stylesheet" href="forms.css">
 
+  <script src="/__/firebase/4.11.0/firebase-app.js"></script>
+  <script src="/__/firebase/4.11.0/firebase-auth.js"></script>
+  <script src="/__/firebase/4.11.0/firebase-database.js"></script>
+  <script src="/__/firebase/init.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDFQ1cj9Hl-sMsmuqbVv7m53cKs7gObwrM",
+      authDomain: "laborless-6d04f.firebaseapp.com",
+      databaseURL: "https://laborless-6d04f.firebaseio.com",
+      projectId: "laborless-6d04f",
+      storageBucket: "laborless-6d04f.appspot.com",
+      messagingSenderId: "801197496805"
+    };
+    firebase.initializeApp(config);
+  </script>
+  <script src="../scripts/main.js"></script>
+
+
 </head>
 <body>
 
@@ -22,7 +43,7 @@
     <div class="row">
         <div class="col-lg-4 offset-lg-4 col-md-8 offset-md-2 col-sm-10 offset-sm-1 col-xm-12" id="student-signUp">
             <h2>Sign Up</h2>
-            <form action="">
+            <form action="JavaScript:handleEmployeeSignUp()">
                 <div class="form-group row">
                     <div style="font-size:2rem; color:#a8a8a8; margin: -0.2em -0.2em 0 0.1em" class="col-sm-2">
                         <i class="fas fa-user"></i>
