--- a/web/LogInSignUpPages/signUpStu.html
+++ b/web/LogInSignUpPages/signUpStu.html
@@ -10,17 +10,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <!--Font Awesome CDN-->
+<!--
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+-->
     <!--CSS File link-->
     <link rel="stylesheet" href="forms.css">
 
   <script src="/__/firebase/4.11.0/firebase-app.js"></script>
   <script src="/__/firebase/4.11.0/firebase-auth.js"></script>
-  <script src="/__/firebase/4.11.0/firebase-database.js"></script>
+  <!-- script src="/__/firebase/4.11.0/firebase-database.js"></script -->
   <script src="/__/firebase/init.js"></script>
 
   <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-  <script>
+  <!-- script>
     // Initialize Firebase
     var config = {
       apiKey: "AIzaSyDFQ1cj9Hl-sMsmuqbVv7m53cKs7gObwrM",
@@ -31,19 +33,20 @@
       messagingSenderId: "801197496805"
     };
     firebase.initializeApp(config);
-  </script>
+  </script -->
+
   <script src="../scripts/main.js"></script>
 
 
 </head>
-<body>
+<body onload="initApp()">
 
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-4 offset-lg-4 col-md-8 offset-md-2 col-sm-10 offset-sm-1 col-xm-12" id="student-signUp">
             <h2>Sign Up</h2>
-            <form action="JavaScript:handleEmployeeSignUp()">
+            <div>
                 <div class="form-group row">
                     <div style="font-size:2rem; color:#a8a8a8; margin: -0.2em -0.2em 0 0.1em" class="col-sm-2">
                         <i class="fas fa-user"></i>
@@ -68,16 +71,19 @@
                         <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
                     </div>
                 </div>
-                <button type="submit" class="btn my-5">Submit</button>
-            </form>
+                <button id="studentRegBtn" class="btn my-5">Submit</button>
+            </div>
         </div>
     </div>
 </div>
 
-    
+<script>
+	document.getElementById('studentRegBtn').addEventListener('click', handleEmployeeSignUp, false);
+</script>
 
 
     <!-- CDN jQuery, JS, pooper for Bootsrap 4-->
+<!-- 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -85,10 +91,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-
+-->
     <!--CDN for scrollreveal-->
+<!--
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+-->
     <!--Testing some animations-->
+<!--
     <script>
         window.sr = new ScrollReveal({ mobile: false })
         window.sr = ScrollReveal();
@@ -100,5 +109,6 @@
 
         //window.sr = new ScrollReveal({ mobile: false })
     </script>
+-->
 </body>
 </html>
