--- a/web/LogInSignUpPages/signUpEmp.html
+++ b/web/LogInSignUpPages/signUpEmp.html
@@ -15,16 +15,23 @@
     <!--CSS File link-->
     <link rel="stylesheet" href="forms.css">
 
+  <script src="/__/firebase/4.11.0/firebase-app.js"></script>
+  <script src="/__/firebase/4.11.0/firebase-auth.js"></script>
+  <!-- script src="/__/firebase/4.11.0/firebase-database.js"></script -->
+  <script src="/__/firebase/init.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+  <script src="../scripts/main.js"></script>
+
 </head>
 
-<body>
+<body onload="initApp()">
 
 
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-4 offset-lg-4 col-md-8 offset-md-2 col-sm-10 offset-sm-1 col-xm-12" id="student-signUp">
                 <h2>Sign Up</h2>
-                <form action="">
+                <div>
                     <div class="form-group row">
                         <div style="font-size:2rem; color:#a8a8a8; margin: -0.2em -0.2em 0 0.1em" class="col-sm-2">
                             <i class="fas fa-user"></i>
@@ -49,13 +56,15 @@
                             <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
                         </div>
                     </div>
-                    <button type="submit" class="btn my-5">Submit</button>
-                </form>
+                    <button id="employerRegBtn" class="btn my-5">Submit</button>
+                </div>
             </div>
         </div>
     </div>
 
-
+<script>
+        document.getElementById('employerRegBtn').addEventListener('click', handleEmployerSignUp, false);
+</script>
 
 
     <!-- CDN jQuery, JS, pooper for Bootsrap 4-->
