--- a/web/studentPage/studentPage.html
+++ b/web/studentPage/studentPage.html
@@ -13,9 +13,17 @@
     <link rel="stylesheet" href="studentPage.css">
     <!--Font Awesome CDN-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+
+  <script src="/__/firebase/4.11.0/firebase-app.js"></script>
+  <script src="/__/firebase/4.11.0/firebase-auth.js"></script>
+  <script src="/__/firebase/4.11.0/firebase-database.js"></script>
+  <script src="/__/firebase/init.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+  <script src="../scripts/main.js"></script>
+
     
 </head>
-<body>
+<body onload="initApp()">
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">laborLess</a>
@@ -32,11 +40,16 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a id="logout-link" class="nav-link" href="#">Logout</a>
                 </li>
             </ul>
         </div>
     </nav>
+
+
+<script>
+        document.getElementById('logout-link').addEventListener('click', toggleSignIn, false);
+</script>
 
     <!-- Categories Section-->
     <section id="categories">
