--- a/web/employerPage/employerPage.html
+++ b/web/employerPage/employerPage.html
@@ -71,7 +71,7 @@
                         <button class="btn btn-lg btn-jobs" data-toggle="modal" data-target="#categoriesModal"><h5>New Job</h5></button>                    
                 </div>
                 <div id="btn-jobs" class="col-md-2 offset-md-2 col-xs-6 offset-xs-3">
-                    <a class="btn btn-lg btn-jobs" href="" role="button" data-placement="bottom" data-toggle="tooltip"
+                    <a class="btn btn-lg btn-jobs" href="myJobs.html" role="button" data-placement="bottom" data-toggle="tooltip"
                         title="See the options below!">
                         <h5>My Jobs</h5>
                     </a>
