--- a/web/employerPage/myJobs.html
+++ b/web/employerPage/myJobs.html
@@ -50,14 +50,11 @@
                         <div class="card" mx-auto>
                             <!-- Heading -->
                             <div class="card-body">
-                                <h4 class="card-title">Card Title</h4>
+                                <h4 class="card-title">Walk Tobby</h4>
                                 <!--This will be implemented using Jordan's sample pictures-->
                                 <!--<img src="C:\Users\Luis\Documents\School\TTU\2018Spring\Capstone\laborLess\employerPage\forHire.jpg" alt="category-img" height="130" width="200" style="border-radius:50%">-->
-                                <p class="card-text" style="padding-top: 3rem;">Lorem ipsum dolor sit amet, id exerci melius mea, 
-                                 id usu suas disputationi. Eos cu iuvaret lobortis conceptam. Ut qui aliquando  Lorem ipsum dolor sit amet, 
-                                 id exerci melius mea, id usu suas disputationi. Eos cu iuvaret lobortis conceptam. Ut qui aliquando Lorem 
-                                 ipsum dolor sit amet, id exerci melius mea, id</p>
-                                <p class="card-text">example@gmail.com</p>
+                                <p class="card-text" style="padding-top: 3rem;">Tobby needs to go for walk every day</p>
+                                <p class="card-text">gerrardf7@gmail.com</p>
                             </div>                   
                         </div>
                     </div>
