--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,7 @@
     <!--Adding jumbotron to cover whole screen-->
     <div class="jumbotron jumbotron-fluid">
         <div class="container text-center">
-          <h1 class="app-name">laborLess</h1>
+          <img src="laborLess-logo.png" alt="laborless-logo">
           <p><a class="btn btn-lg btn-student" href="LogInSignUpPages\signUpEmp.html" role="button" data-placement="bottom">Looking to Hire?</a></p> <p><a class="btn btn-lg btn-employer" href="LogInSignUpPages\signUpStu.html" role="button" data-placement="bottom">Looking to Work?</a></p>
           <h5>Already have an account?<a href="LogInSignUpPages\loginEmp.html">Employer</a><a href="LogInSignUpPages\loginStu.html">Student</a></h5>
         </div>
