--- a/web/employerPage/employerPage.html
+++ b/web/employerPage/employerPage.html
@@ -183,7 +183,8 @@
         document.getElementById('post-job-btn').addEventListener('click', postJob, false);
 </script>
 
- 
+    <!--Link to js file used in myJobs page-->
+    <script src="jobPost.js"></script>
     <!--Other external scripts-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
