--- a/web/employerPage/myJobs.html
+++ b/web/employerPage/myJobs.html
@@ -16,8 +16,17 @@
     <!--jQuery CDN-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     
-</head>
-<body>
+    <script src="/__/firebase/4.11.0/firebase-app.js"></script>
+    <script src="/__/firebase/4.11.0/firebase-auth.js"></script>
+    <script src="/__/firebase/4.11.0/firebase-database.js"></script>
+    <script src="/__/firebase/init.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+    <script src="../scripts/main.js"></script>
+  
+      
+  </head>
+
+  <body onload="initApp()">
     <!--Navbar-->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">laborLess</a>
@@ -34,11 +43,16 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="..\index.html">Logout</a>
+                    <!-- TODO: make this actually call logout function -->
+                    <a id="logout-link" class="nav-link" href="#">Logout</a>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <script>
+            document.getElementById('logout-link').addEventListener('click', toggleSignIn, false);
+    </script>
 
         <!--MyJobs Posts-->
         <!-- Testing UI look with multiple posts-->
@@ -58,6 +72,22 @@
                             </div>                   
                         </div>
                     </div>
+
+                    <div id=job-card-2 class="col-lg-3 col-md-6 col-sm-12">
+                            <!-- Contact Card-->
+                            <div class="card" mx-auto>
+                                <!-- Heading -->
+                                <div class="card-body">
+                                    <h4 class="card-title">Walk Tobby</h4>
+                                    <!--This will be implemented using Jordan's sample pictures-->
+                                    <!--<img src="C:\Users\Luis\Documents\School\TTU\2018Spring\Capstone\laborLess\employerPage\forHire.jpg" alt="category-img" height="130" width="200" style="border-radius:50%">-->
+                                    <p class="card-text" style="padding-top: 3rem;">Tobby needs to go for walk every day</p>
+                                    <p class="card-text">gerrardf7@gmail.com</p>
+                                </div>                   
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>       
