--- a/web/studentPage/studentCategories/studentClean.html
+++ b/web/studentPage/studentCategories/studentClean.html
@@ -28,12 +28,12 @@
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
+                <li class="nav-item active mx-2">
                     <a class="nav-link" href="#">Profile
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-2">
                     <a class="nav-link" href="#">Logout</a>
                 </li>
             </ul>
@@ -44,18 +44,18 @@
     <section id="categories">
         <div class="container-fluid">
             <div class="row">
-                <div style="font-size:3rem; color:#253374" class="category-icon col-lg-2 my-3 ml-5">
-                    <i class="fas fa-home"></i>
-                </div>
-                <div style="font-size:3rem; color:#253374" class="category-icon col-lg-2 my-3 ml-5">
-                    <i class="fas fa-paw"></i>
-                </div>
-                <div style="font-size:3rem; color:#253374" class="category-icon col-lg-2 my-3 ml-5">
-                    <i class="fas fa-car"></i>
-                </div>
-                <div style="font-size:3rem; color:#253374" class="category-icon col-lg-2 my-3 ml-5">
-                    <i class="fas fa-tint"></i>
-                </div>
+                <a style="font-size:3rem; color:#253374" class="category-icon col-lg my-3 mx-2" href="studentHome.html">
+                        <i class="fas fa-home"></i>
+				</a>
+                <a style="font-size:3rem; color:#253374" class="category-icon col-lg my-3 mx-2" href="studentPets.html">
+                        <i class="fas fa-paw"></i>
+                </a>
+                <a style="font-size:3rem; color:#253374" class="category-icon col-lg my-3 mx-2" href="studentCar.html">
+                        <i class="fas fa-car"></i>
+                </a>
+                <a style="font-size:3rem; color:#253374" class="category-icon col-lg my-3 mx-2" href="studentClean.html">
+                        <i class="fas fa-tint"></i>
+                </a>
             </div>
         </div>
     </section>
