--- a/web/studentPage/studentCategories/studentPets.html
+++ b/web/studentPage/studentCategories/studentPets.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,23 +16,24 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     
 </head>
+
 <body>
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">laborLess</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
             aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon" style"color:white"></span>
+            <span class="navbar-toggler-icon" style "color:white"></span>
         </button>
     
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
+                <li class="nav-item active mx-2">
                     <a class="nav-link" href="#">Profile
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-2">
                     <a class="nav-link" href="#">Logout</a>
                 </li>
             </ul>
@@ -42,18 +44,18 @@
     <section id="categories">
         <div class="container-fluid">
             <div class="row">
-                <div style="font-size:3rem; color:#253374"class="category-icon col-lg-2 my-3 ml-5">
-                        <a href="studentCategories/studentHome.html"><i class="fas fa-home"></i></a>
-                </div>
-                <div style="font-size:3rem; color:#253374" class="category-icon col-lg-2 my-3 ml-5">
-                        <a href="studentCategories/studentPets.html"><i class="fas fa-paw"></i></a>
-                </div>
-                <div style="font-size:3rem; color:#253374" class="category-icon col-lg-2 my-3 ml-5">
-                        <a href="studentCategories/studentCar.html"><i class="fas fa-car"></i></a>
-                </div>
-                <div style="font-size:3rem; color:#253374" class="category-icon col-lg-2 my-3 ml-5">
-                        <a href="studentCategories/studentClean.html"><i class="fas fa-tint"></i></a>
-                </div>
+				<a style="font-size:3rem; color:#253374" class="category-icon col-lg my-3 mx-2" href="studentHome.html">
+                        <i class="fas fa-home"></i>
+				</a>
+                <a style="font-size:3rem; color:#253374" class="category-icon col-lg my-3 mx-2" href="studentPets.html">
+                        <i class="fas fa-paw"></i>
+                </a>
+                <a style="font-size:3rem; color:#253374" class="category-icon col-lg my-3 mx-2" href="studentCar.html">
+                        <i class="fas fa-car"></i>
+                </a>
+                <a style="font-size:3rem; color:#253374" class="category-icon col-lg my-3 mx-2" href="studentClean.html">
+                        <i class="fas fa-tint"></i>
+                </a>
             </div>
         </div>
     </section>
