--- a/web/studentPage/studentCategories/studentCar.html
+++ b/web/studentPage/studentCategories/studentCar.html
@@ -74,11 +74,16 @@
     <!--Jobs Section-->
     <section id="list-jobs">
         <div class="container-fuid">
-            <div class="row">
-                <div class="job-post col-lg-3"></div>
-                <div class="job-post col-lg-3"></div>
-                <div class="job-post col-lg-3"></div>
-                <div class="job-post col-lg-3"></div>
+            <div class="card-columns px-2">
+                <div class="card">
+					<img class="card-img-top" src="img\auto.jpg" alt="Card image cap">
+					<div class="card-body">
+					  <h5 class="card-title">Change Oil</h5>
+					  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					  <span data-toggle="tooltip" data-placement="bottom" title="View User Profile"><i class="fas fa-address-card option-icon"></i></span>
+					  <button type="button" class="btn btn-outline-primary px-4">Elect</button>
+					</div>
+				</div>
             </div>
         </div>
     </section>
