--- a/web/LogInSignUpPages/loginEmp.html
+++ b/web/LogInSignUpPages/loginEmp.html
@@ -53,7 +53,32 @@
                         </div>
                     </div>
                     <button class=" btn my-5 btn-large" id="loginBtn">Start Hiring!</button>
+                    <p id="reset-password" style="margin-left: 1rem; display:inline-block" data-toggle="modal" data-target="#resetPasswordModal">Forgot password?</p>
                     <p id="message"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Reset Password Modal....triggered when user clicks 'forgot password?'-->
+    <div class="modal fade" id="resetPasswordModal" tabindex="-1" role="dialog" aria-labelledby="resetPasswordModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="resetPasswordModalLabel">Forgot my password</h5>
+                    <button id="reset-close" type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <label for="emailInput">Email address</label>
+                        <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Email">
+                        <small id="emailHelp" class="form-text text-muted">Check your email inbox.</small>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button id="password-reset" type="button" data-dismiss="modal" class="btn">Reset Password</button>
                 </div>
             </div>
         </div>
