--- a/web/employerPage/employerPage.html
+++ b/web/employerPage/employerPage.html
@@ -77,7 +77,7 @@
                     </a>
                 </div>
                 <div id="btn-jobs" class="col-md-2 offset-md-2 col-xs-6 offset-xs-3">
-                    <a class="btn btn-lg btn-jobs" href="" role="button" data-placement="bottom" data-toggle="tooltip"
+                    <a class="btn btn-lg btn-jobs" href="completedJobs.html" role="button" data-placement="bottom" data-toggle="tooltip"
                         title="See what jobs were completed!">
                         <h5>Completed Jobs</h5>
                     </a>
