--- a/web/employerPage/myJobs.html
+++ b/web/employerPage/myJobs.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <!--CSS File Link-->
-    <link rel="stylesheet" href="jobsPosts.css">
+    <link rel="stylesheet" href="...\employerPage\css\jobsPosts.css">
     <!--Font Awesome CDN-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <!--jQuery CDN-->
