--- a/web/employerPage/myJobs.html
+++ b/web/employerPage/myJobs.html
@@ -31,7 +31,7 @@
   <body onload="initApp()">
     <!--Navbar-->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">laborLess</a>
+        <a class="navbar-brand" href="/">laborLess</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" style"color:white"></span>
