--- a/web/studentPage/studentBlock.html
+++ b/web/studentPage/studentBlock.html
@@ -20,7 +20,7 @@
 <body>
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">laborLess</a>
+        <a class="navbar-brand" href="/">laborLess</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" style "color:white"></span>
