--- a/web/studentPage/studentBlock.html
+++ b/web/studentPage/studentBlock.html
@@ -15,9 +15,16 @@
     <!--Font Awesome CDN-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
-</head>
-
-<body>
+    <script src="/__/firebase/4.11.0/firebase-app.js"></script>
+    <script src="/__/firebase/4.11.0/firebase-auth.js"></script>
+    <script src="/__/firebase/4.11.0/firebase-database.js"></script>
+    <script src="/__/firebase/init.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+    <script src="../../scripts/main.js"></script>
+  
+      
+  </head>
+  <body onload="initApp()">
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="/">laborLess</a>
@@ -34,11 +41,15 @@
                     </a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a id="logout-link" class="nav-link" href="#">Logout</a>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <script>
+        document.getElementById('logout-link').addEventListener('click', toggleSignIn, false);
+    </script>
 
     <!-- Background Check Block Message-->
     <section id="bg-chk-block">
