--- a/web/LogInSignUpPages/loginStu.html
+++ b/web/LogInSignUpPages/loginStu.html
@@ -89,7 +89,7 @@
 
 
     <!--Validate JS Link-->
-    <script src="validateStudent.js"></script> 
+    <!-- script src="validateStudent.js"></script --> 
     <!-- CDN jQuery, JS, pooper for Bootsrap 4-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
