--- a/web/studentPage/studentCategories/studentCar.html
+++ b/web/studentPage/studentCategories/studentCar.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <li class="nav-item active mx-2">
-                    <a class="nav-link" href="#">Profile
+                    <a class="nav-link" href="/">Profile
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
