--- a/web/employerPage/myJobs.html
+++ b/web/employerPage/myJobs.html
@@ -160,7 +160,7 @@
 
     
     <!--Testing appending cards-->
-       <script src="jobPost.js"></script>
+       <!--script src="jobPost.js"></script-->
     <!--Other external scripts-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
