password reset integrated

--- a/web/LogInSignUpPages/loginEmp.html
+++ b/web/LogInSignUpPages/loginEmp.html
@@ -78,7 +78,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button id="password-reset" type="button" data-dismiss="modal" class="btn">Reset Password</button>
+                    <button id="password-reset" type="button" data-dismiss="modal" class="btn" onclick="sendPasswordReset()">Reset Password</button>
                 </div>
             </div>
         </div>
