mark jobs completed implemented

--- a/web/employerPage/myJobs.html
+++ b/web/employerPage/myJobs.html
@@ -76,7 +76,8 @@
                        -You can either choose one of these ideas or come up with one that could be easier 
                        to implement.
                    -->
-                    <div id=job-static-card class="col-lg-3 col-md-6 col-sm-12">
+                   <div id="job-static-card" class="col-sm-12"></div>
+                    <!-- div id="job-static-card" class="col-lg-3 col-md-6 col-sm-12" -->
 
                         <!--
                         <div class="card" mx-auto>
@@ -93,7 +94,7 @@
                         </div>
                         -->
 
-                    </div>  
+                    <!-- /div -->  
                     <!--Ends testing card-->
 
                 </div>
