employers can view list of queued workers

--- a/web/employerPage/myJobs.html
+++ b/web/employerPage/myJobs.html
@@ -104,7 +104,7 @@
         <!--When employer clicks on card displays modal with list of employees interested in working-->
         <div class="modal fade text-dark" id="hiringModal" tabindex="-1" role="dialog">
             <div class="modal-dialog">
-                <div class="modal-content">
+                <div id="hiringModalContent" class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="hiringModalTitle">
                             Select a student to hire
@@ -114,7 +114,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <a href="#" id="student-username" data-toggle="modal" data-target="#studentInfo" data-dismiss="modal" style="color:black !important; font-size:1.2rem !important">Gerard Fierro</a>     
+                        <!-- a href="#" id="student-username" data-toggle="modal" data-target="#studentInfo" data-dismiss="modal" style="color:black !important; font-size:1.2rem !important">Gerard Fierro</a -->     
                     </div>
                 </div>
             </div>
