employers can select workers for job

--- a/web/employerPage/myJobs.html
+++ b/web/employerPage/myJobs.html
@@ -135,9 +135,9 @@
                         </button>
                     </div>
         
-                    <div class="modal-body">    
+                    <div id="studentInfoModalBody" class="modal-body">    
                         <!-- Profile Photo -->
-                        <img src="img\silhouette.jpg" class="rounded mx-auto mb-5 d-block" alt="user-image">
+                        <img src="img/silhouette.jpg" class="rounded mx-auto mb-5 d-block" alt="user-image">
                         <!-- User Ratings -->
                         <h5>Knowledge</h5>
                         <div class="progress my-2">
@@ -152,8 +152,8 @@
                             <div class="progress-bar-custom" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-outline-primary">Select</button>
+                    <div id="studentInfoModalFooter" class="modal-footer">
+                        <button id="selectUserBtn" type="button" class="btn btn-outline-primary">Select</button>
                     </div>
                 </div>
             </div>
