changed hardcoded username of student

--- a/web/studentPage/studentPage.html
+++ b/web/studentPage/studentPage.html
@@ -92,7 +92,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div id="user-info" class="col-lg-2">
-                    <div id="greeting"><h2>Hi Gerard!</h2></div>
+                    <div id="greeting"><h2>Hi user!</h2></div>
                     <h4>Your ratings</h4>
                 </div>
                 <div id="accepted-jobs" class="col-lg-8">
