--- a/web/employerPage/myJobs.html
+++ b/web/employerPage/myJobs.html
@@ -124,7 +124,7 @@
         <!-- This displays the student info when the student username is clicked on the previous modal -->
         <div class="modal fade" id="studentInfo" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
+                <div id="studentInfoModal" class="modal-content">
                     <div class="modal-header">
         
                         <!-- Displays Username -->
