Employer Select Student
When employer selects their preferred worker, modal now dismisses.

--- a/web/employerPage/myJobs.html
+++ b/web/employerPage/myJobs.html
@@ -79,7 +79,7 @@
                    <div id="job-static-card" class="col-sm-12"></div>
                     <!-- div id="job-static-card" class="col-lg-3 col-md-6 col-sm-12" -->
 
-                        <!--
+                        
                         <div class="card" mx-auto>
                             <img class="card-img-top" src="img\puppy-test.jpg" alt="category-img">                                
                             <div class="card-body">
@@ -92,7 +92,6 @@
                                <span data-toggle="tooltip" data-placement="bottom" title="Job Completed"><i class="fas fa-check-circle option-icon"></i></span>
                             </div>   
                         </div>
-                        -->
 
                     <!-- /div -->  
                     <!--Ends testing card-->
@@ -114,7 +113,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <!-- a href="#" id="student-username" data-toggle="modal" data-target="#studentInfo" data-dismiss="modal" style="color:black !important; font-size:1.2rem !important">Gerard Fierro</a -->     
+                        <a href="#" id="student-username" data-toggle="modal" data-target="#studentInfo" data-dismiss="modal" style="color:black !important; font-size:1.2rem !important">Gerard Fierro</a>  
                     </div>
                 </div>
             </div>
@@ -124,7 +123,7 @@
         <!-- This displays the student info when the student username is clicked on the previous modal -->
         <div class="modal fade" id="studentInfo" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
-                <div id="studentInfoModal" class="modal-content">
+                <div class="modal-content">
                     <div class="modal-header">
         
                         <!-- Displays Username -->
@@ -153,7 +152,7 @@
                         </div>
                     </div>
                     <div id="studentInfoModalFooter" class="modal-footer">
-                        <button id="selectUserBtn" type="button" class="btn btn-outline-primary">Select</button>
+                        <button id="selectUserBtn" type="button" data-dismiss="modal" class="btn btn-outline-primary">Select</button>
                     </div>
                 </div>
             </div>
