--- a/web/employerPage/myJobs.html
+++ b/web/employerPage/myJobs.html
@@ -79,7 +79,7 @@
                    <div id="job-static-card" class="col-sm-12"></div>
                     <!-- div id="job-static-card" class="col-lg-3 col-md-6 col-sm-12" -->
 
-                        
+                        <!--
                         <div class="card" mx-auto>
                             <img class="card-img-top" src="img\puppy-test.jpg" alt="category-img">                                
                             <div class="card-body">
@@ -92,7 +92,7 @@
                                <span data-toggle="tooltip" data-placement="bottom" title="Job Completed"><i class="fas fa-check-circle option-icon"></i></span>
                             </div>   
                         </div>
-
+                        -->
                     <!-- /div -->  
                     <!--Ends testing card-->
 
@@ -113,7 +113,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <a href="#" id="student-username" data-toggle="modal" data-target="#studentInfo" data-dismiss="modal" style="color:black !important; font-size:1.2rem !important">Gerard Fierro</a>  
+                        <!-- a href="#" id="student-username" data-toggle="modal" data-target="#studentInfo" data-dismiss="modal" style="color:black !important; font-size:1.2rem !important">Gerard Fierro</a>  -->
                     </div>
                 </div>
             </div>
